[package]
name = "balls_and_wall_wasm"
version = "0.1.0"
authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    quicksilver = "*"
    nphysics2d = "*"
    ncollide2d = "*"
    nalgebra = "*"
    rand = "*"